work in progress- adding gradle task for ant task